--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+cache:
+  directories:
+    - node_modules
+
 notifications:
   email:
     on_success: never
@@ -21,22 +25,15 @@ matrix:
       env: WP_TRAVISCI=phpcs
 
 before_script:
-    - |
-      if [[ ! -z "$WP_VERSION" ]] ; then
-        bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-      fi
-    - |
-      if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-        npm install
-        composer install
-      fi
+  - composer install
+  - npm install -g npm
+  - npm install -g grunt-cli
+  - npm install
+  - npm prune
+  - phpenv versions
+  - npm --version
+  - node --version
 
 script:
-    - |
-      if [[ ! -z "$WP_VERSION" ]] ; then
-        phpunit
-      fi
-    - |
-      if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-        grunt phpcs
-      fi
+  - grunt phpcs
+  - grunt default
