--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "url": "https://github.com/washingtonstateuniversity/WSU-25x2030-Theme"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.1",
-    "es6-promise": "^3.3.1",
+    "autoprefixer": "^7.1.2",
     "grunt": "~1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "~1.0.2",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-jscs": "^3.0.1",
     "grunt-phpcs": "^0.4.0",
-    "grunt-postcss": "^0.8.0"
+    "grunt-postcss": "^0.8.0",
+    "grunt-stylelint": "^0.9.0",
+    "postcss": "^6.0.0",
+    "stylelint": "^8.0.0"
   }
 }
